[package]
name = "btwallet"
version = "4.0.1"
edition = "2021"
license = "MIT"
description = "Bittensor wallet — Substrate-based key management, encryption, and signing."
repository = "https://github.com/opentensor/btwallet"
homepage = "https://github.com/opentensor/btwallet"
documentation = "https://docs.rs/btwallet"
readme = "README.md"
keywords = ["bittensor", "wallet", "substrate", "crypto", "keypair"]
categories = ["cryptography", "cryptography::cryptocurrencies"]
rust-version = "1.74"
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md"]

[lib]
name = "bittensor_wallet"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
sp-core = "34.0.0"
bip39 = { version = "2.0.0", features = ["rand"] }
hex = "0.4.3"
colored = "2.1.0"
serde_json = "1.0.128"
passwords = "3.1.16"
sodiumoxide = "0.2"
ansible-vault = "0.2.1"
fernet = "=0.2.1"
pbkdf2 = "0.12.2"
sha2 = "0.10.8"
dirs = "5.0.1"
serde = { version = "1.0.210", features = ["derive"] }
base64 = "0.22.1"
scrypt = "0.11.0"
schnorrkel = "0.11.4"
shellexpand = "3.1.0"
rpassword = "7.3.1"
clap = "4.5.21"
thiserror = "2.0.3"
pyo3 = { version = "0.26.0", features = ["generate-import-lib"], optional = true }

[dependencies.openssl-sys]
version = "0.9"
optional = true
features = ["vendored"]

[features]
default = []
python-bindings = ["pyo3"]
extension-module = ["python-bindings", "pyo3/extension-module"]
vendored-openssl = ["openssl-sys/vendored"]
