[project]
name = "bittensor-wallet"
# Bumping version in Cargo.toml file only
dynamic = ["version"]
description = ""
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["substrate", "scale", "codec", "bittensor", "wallet"]

dependencies = []
requires-python = ">= 3.10"

authors = [{ name = "Roman Chkhaidze", email = "r@latent.to" }]
maintainers = [{ name = "Cortex Team", email = "cortex@opentensor.dev" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Repository = "https://github.com/opentensor/btwallet"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
features = ["extension-module"]
include = ["bittensor_wallet*", "src*"]
exclude = ["tests*"]

[project.optional-dependencies]
dev = [
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
  "pytest-mock==3.15.1",
  "pytest-split==0.11.0",
  "pytest-xdist==3.8.0",
  "pytest-rerunfailures==16.1",
  "coveralls==4.1.0",
  "pytest-cov==7.1.0",
  "ddt==1.6.0",
  "hypothesis==6.81.1",
  "mypy==1.20.2",
  "types-retry==0.9.9.4",
  "typing_extensions>= 4.0.0; python_version<'3.11'",
  "freezegun==1.5.0",
  "httpx==0.27.0", # used by bittensor/tests/unit_tests/test_axon: The starlette.testclient module requires the httpx package to be installed.
  "ruff==0.15.12",
  "aioresponses==0.7.6",
  "factory-boy==3.3.3",
  "types-requests",
  "maturin==1.8.3",
  "ansible_vault~=2.1",
  "bittensor>=10.3.0",
]

[dependency-groups]
substrate-legacy = [
  "substrate-interface==1.7.11",
]